--- a/scss/_small-default.scss
+++ b/scss/_small-default.scss
@@ -23,6 +23,7 @@ body {
     font-family: $defaultFont;
     z-index: -2;
     background-color:black;
+    overflow-x:hidden;
 }
 
 
